Test distribution for Snowflake JDBC issue with Java 17